Testando funções e arquivos.